--- a/lines.css
+++ b/lines.css
@@ -1,6 +1,6 @@
 /* Line Break Style One */
 #new1 {
-  border-top: 1px solid red;
+  border-top: 1px solid #8c0000 ;
 }
 
 /* Line Break Style Two */
